--- a/.github/workflows/terraform-doc.yaml
+++ b/.github/workflows/terraform-doc.yaml
@@ -14,6 +14,19 @@ jobs:
   tf-doc:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        id: checkout
+          
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3.1.2
+        with:
+          terraform_version: ${{ vars.terraform_version }}
+          cli_config_credentials_token: ${{ secrets.TFE_TOKEN }}
+          cli_config_credentials_hostname: ${{ vars.terraform_api }}
+          
+      - name: terraform init
+        run: terraform init -upgrade
       - name: Render terraform docs inside the README.md and push changes back to PR branch
         uses: terraform-docs/gh-actions@v1.2.0
         if: ${{ github.event_name == 'pull_request' }}
