--- a/.github/workflows/terraform-doc.yaml
+++ b/.github/workflows/terraform-doc.yaml
@@ -88,3 +88,19 @@ jobs:
                 body: output
               })
             }
+            
+      - name: Commit & Push changes
+        if: ${{ github.event_name == 'pull_request' }}
+        run: |
+          if ! git diff-index --quiet HEAD; then 
+            git status
+            remote_repo="https://${{github.actor}}:${{secrets.GH_TOKEN}}@${{ github.server_url }}/${{ github.repository }}.git"
+            git remote add repo ${remote_repo}
+            git config http.sslVerify false
+            git config --local user.email "${{inputs.github_email}}"
+            git config --local user.name "${{inputs.github_username}}"
+            git add .
+            git commit -m "${{inputs.autoformat_message}}"
+            git push -u repo ${{ github.head_ref }}
+            echo "auto_format=true" >> $GITHUB_ENV 
+          fi
