--- a/.github/workflows/terraform-doc.yaml
+++ b/.github/workflows/terraform-doc.yaml
@@ -100,7 +100,7 @@ jobs:
             git config --local user.email "${{vars.GH_EMAIL}}"
             git config --local user.name "${{vars.GH_USERNAME}}"
             git add .
-            git commit -m "${{inputs.autoformat_message}}"
+            git commit -m "Terraform Docs"
             git push -u repo ${{ github.head_ref }}
             echo "auto_format=true" >> $GITHUB_ENV 
           fi
