--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -68,10 +68,12 @@ jobs:
       cache: ${{ github.workspace }}
       download_cache: true
       commit_sha: ${{ needs.setup-terraform.outputs.commit_sha }}
+      AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
     secrets:
       TFE_TOKEN: ${{ secrets.TFE_TOKEN }}
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
       GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
      
   gtag:
     needs: terraform-validate
