Rename setup-terraform job to terraform-test in workflow configuration

--- a/.github/workflows/terraform-test.yaml
+++ b/.github/workflows/terraform-test.yaml
@@ -16,7 +16,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   
 jobs:
-  setup-terraform:
+  terraform-test:
     outputs:
       commit_sha: ${{ steps.checkout.outputs.commit }}
         
