Add concurrency settings to Terraform test workflow and update project name variable to include random pet ID

--- a/.github/workflows/terraform-test.yaml
+++ b/.github/workflows/terraform-test.yaml
@@ -15,6 +15,10 @@ env:
   AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   
+concurrency:
+  group: terraform-test
+  cancel-in-progress: false
+  
 jobs:
   terraform-test:
     outputs:
